--- a/ngcs/css/styles.css
+++ b/ngcs/css/styles.css
@@ -19,12 +19,12 @@
   --orange: #fd7e14;
   --yellow: #ffc107;
   --green: #28a745;
-  --teal: #88ACDB;
+  --teal: #86F200;
   --cyan: #17a2b8;
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #88ACDB ;/*#88ACDB;*/
+  --primary: #86F200; /*#86F200 ;/*#86F200;*/
   --secondary: #6c757d;
   --success: #28a745;
   --info: #17a2b8;
@@ -160,7 +160,7 @@ sup {
 }
 
 a {
-  color: #88ACDB;
+  color: #86F200;
   text-decoration: none;
   background-color: transparent;
 }
@@ -2491,28 +2491,28 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #88ACDB; /*#88ACDB;*/
-  border-color: #88ACDB;
+  background-color: #86F200; /*#86F200;*/
+  border-color: #86F200;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #41536B;
+  background-color: #5BA400;
   border-color: #4f837f;
 }
 .btn-primary:focus, .btn-primary.focus {
   color: #fff;
-  background-color: #41536B;
+  background-color: #5BA400;
   border-color: #4f837f;
   box-shadow: 0 0 0 0.2rem rgba(123, 175, 172, 0.5);
 }
 .btn-primary.disabled, .btn-primary:disabled {
   color: #fff;
-  background-color: #88ACDB;
-  border-color: #88ACDB;
+  background-color: #86F200;
+  border-color: #86F200;
 }
 .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active, .show > .btn-primary.dropdown-toggle {
   color: #fff;
-  background-color: #41536B;
+  background-color: #5BA400;
   border-color: #4a7b78;
 }
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus {
@@ -2760,25 +2760,25 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #88ACDB;
-  border-color: #88ACDB;
+  color: #86F200;
+  border-color: #86F200;
 }
 .btn-outline-primary:hover {
   color: #fff;
-  background-color: #88ACDB;
-  border-color: #88ACDB;
+  background-color: #86F200;
+  border-color: #86F200;
 }
 .btn-outline-primary:focus, .btn-outline-primary.focus {
   box-shadow: 0 0 0 0.2rem rgba(100, 161, 157, 0.5);
 }
 .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-  color: #88ACDB;
+  color: #86F200;
   background-color: transparent;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active, .show > .btn-outline-primary.dropdown-toggle {
   color: #fff;
-  background-color: #88ACDB;
-  border-color: #88ACDB;
+  background-color: #86F200;
+  border-color: #86F200;
 }
 .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-outline-primary.dropdown-toggle:focus {
   box-shadow: 0 0 0 0.2rem rgba(100, 161, 157, 0.5);
@@ -2986,7 +2986,7 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #88ACDB;
+  color: #86F200;
   text-decoration: none;
 }
 .btn-link:hover {
@@ -3263,7 +3263,7 @@ input[type=button].btn-block {
 .dropdown-item.active, .dropdown-item:active {
   color: #fff;
   text-decoration: none;
-  background-color: #88ACDB;
+  background-color: #86F200;
 }
 .dropdown-item.disabled, .dropdown-item:disabled {
   color: #6c757d;
@@ -3589,8 +3589,8 @@ input[type=button].btn-block {
 }
 .custom-control-input:checked ~ .custom-control-label::before {
   color: #fff;
-  border-color: #88ACDB;
-  background-color: #88ACDB;
+  border-color: #86F200;
+  background-color: #86F200;
 }
 .custom-control-input:focus ~ .custom-control-label::before {
   box-shadow: 0 0 0 0.2rem rgba(100, 161, 157, 0.25);
@@ -3645,8 +3645,8 @@ input[type=button].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26l2.974 2.99L8 2.193z'/%3e%3c/svg%3e");
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #88ACDB;
-  background-color: #88ACDB;
+  border-color: #86F200;
+  background-color: #86F200;
 }
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e");
@@ -3848,7 +3848,7 @@ input[type=button].btn-block {
   width: 1rem;
   height: 1rem;
   margin-top: -0.25rem;
-  background-color: #88ACDB;
+  background-color: #86F200;
   border: 0;
   border-radius: 1rem;
   -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3877,7 +3877,7 @@ input[type=button].btn-block {
 .custom-range::-moz-range-thumb {
   width: 1rem;
   height: 1rem;
-  background-color: #88ACDB;
+  background-color: #86F200;
   border: 0;
   border-radius: 1rem;
   -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -3909,7 +3909,7 @@ input[type=button].btn-block {
   margin-top: 0;
   margin-right: 0.2rem;
   margin-left: 0.2rem;
-  background-color: #88ACDB;
+  background-color: #86F200;
   border: 0;
   border-radius: 1rem;
   -ms-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -4030,7 +4030,7 @@ input[type=button].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #88ACDB;
+  background-color: #86F200;
 }
 
 .nav-fill .nav-item {
@@ -4674,7 +4674,7 @@ input[type=button].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #88ACDB;
+  color: #86F200;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
@@ -4703,8 +4703,8 @@ input[type=button].btn-block {
 .page-item.active .page-link {
   z-index: 3;
   color: #fff;
-  background-color: #88ACDB;
-  border-color: #88ACDB;
+  background-color: #86F200;
+  border-color: #86F200;
 }
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -4780,7 +4780,7 @@ a.badge:hover, a.badge:focus {
 
 .badge-primary {
   color: #fff;
-  background-color: #88ACDB;
+  background-color: #86F200;
 }
 a.badge-primary:hover, a.badge-primary:focus {
   color: #fff;
@@ -5083,7 +5083,7 @@ a.badge-black:focus, a.badge-black.focus {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #88ACDB;
+  background-color: #86F200;
   transition: width 0.6s ease;
 }
 @media (prefers-reduced-motion: reduce) {
@@ -5164,8 +5164,8 @@ a.badge-black:focus, a.badge-black.focus {
 .list-group-item.active {
   z-index: 2;
   color: #fff;
-  background-color: #88ACDB;
-  border-color: #88ACDB;
+  background-color: #86F200;
+  border-color: #86F200;
 }
 .list-group-item + .list-group-item {
   border-top-width: 0;
@@ -6209,7 +6209,7 @@ a.close.disabled {
 }
 
 .bg-primary {
-  background-color: #88ACDB !important;
+  background-color: #86F200 !important;
 }
 
 a.bg-primary:hover, a.bg-primary:focus,
@@ -6347,7 +6347,7 @@ button.bg-black:focus {
 }
 
 .border-primary {
-  border-color: #88ACDB !important;
+  border-color: #86F200 !important;
 }
 
 .border-secondary {
@@ -9925,7 +9925,7 @@ button.bg-black:focus {
 }
 
 .text-primary {
-  color: #88ACDB !important;
+  color: #86F200 !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
@@ -10145,8 +10145,8 @@ body {
 #mainNav .navbar-toggler {
   font-size: 80%;
   padding: 0.75rem;
-  color: #88ACDB;
-  border: 1px solid #88ACDB;
+  color: #86F200;
+  border: 1px solid #86F200;
 }
 #mainNav .navbar-toggler:focus {
   outline: none;
@@ -10200,15 +10200,15 @@ body {
     border-bottom: 0.25rem solid transparent;
   }
   #mainNav.navbar-shrink .nav-link:hover {
-    color: #88ACDB;
+    color: #86F200;
   }
   #mainNav.navbar-shrink .nav-link:active {
     color: #467370;
   }
   #mainNav.navbar-shrink .nav-link.active {
-    color: #88ACDB;
+    color: #86F200;
     outline: none;
-    border-bottom: 0.25rem solid #88ACDB;
+    border-bottom: 0.25rem solid #86F200;
   }
 }
 
@@ -10287,7 +10287,7 @@ body {
 @media (min-width: 992px) {
   .projects-section .featured-text {
     padding: 0 0 0 2rem;
-    border-left: 0.5rem solid #88ACDB;
+    border-left: 0.5rem solid #86F200;
   }
 }
 .projects-section .project-text {
@@ -10299,7 +10299,7 @@ body {
     padding: 5rem;
   }
   .projects-section .project-text hr {
-    border-color: #88ACDB;
+    border-color: #86F200;
     border-width: 0.25rem;
     width: 30%;
   }
@@ -10329,7 +10329,7 @@ body {
 }
 .contact-section .card {
   border: 0;
-  border-bottom: 0.25rem solid #88ACDB;
+  border-bottom: 0.25rem solid #86F200;
 }
 .contact-section .card h4 {
   font-size: 0.8rem;
@@ -10338,7 +10338,7 @@ body {
   letter-spacing: 0.15rem;
 }
 .contact-section .card hr {
-  border-color: #88ACDB;
+  border-color: #86F200;
   border-width: 0.25rem;
   width: 3rem;
 }
