--- a/ngcs/css/puzzel.css
+++ b/ngcs/css/puzzel.css
@@ -194,11 +194,11 @@ border-radius: 5px !important;
   outline-width: 1px !important;
   border-radius: 5px !important;
 }
-/*
+
 *:focus {
+  outline-width: 0px !important;
 
-
-} */
+}
 /* *:active {
 outline-color: blue !important;
 outline-style: dotted !important;
