--- a/ngcs/css/styles.css
+++ b/ngcs/css/styles.css
@@ -2491,12 +2491,12 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #86F200; /*#86F200;*/
+  background-color: #5BA400; /*#86F200;*/
   border-color: #86F200;
 }
 .btn-primary:hover {
   color: #fff;
-  background-color: #5BA400;
+  background-color: #86F200;
   border-color: #4f837f;
 }
 .btn-primary:focus, .btn-primary.focus {
