--- a/ngcs/css/puzzel.css
+++ b/ngcs/css/puzzel.css
@@ -906,7 +906,7 @@ margin-left: 10px;}
   -ms-transform: matrix(0.866, -0.5, 0.866, 0.5, 0, 0);
   transform: matrix(0.866, -0.5, 0.866, 0.5, 0, 0); } */
 
-.intelecomdialog__question-time {
+/* .intelecomdialog__question-time {
   display: inline-block;
 
 margin-right: -10px;
@@ -919,7 +919,15 @@ font-size: 10px;
                -2px -2px 6px #5b5b5b;
   border-radius: 55px;
 
- }
+ } */
+
+ .intelecomdialog__question-time {
+   display: inline-block;
+   margin-right: 10px;
+   vertical-align: top;
+   color: #808080;
+   font-size: 10px;
+   font-style: italic; }
 
 .intelecomdialog__answer {
   margin-bottom: 10px;
