--- a/ngcs/css/puzzel.css
+++ b/ngcs/css/puzzel.css
@@ -1265,11 +1265,11 @@ display: inline-flex;
   top: auto;
   overflow: auto;
   -webkit-box-shadow: inset 1px 1px 3px #171717,
-               inset -1px -1px 3px #5b5b5b;
+               inset -1px -1px 3px #5b5b5b !important;
   -moz-box-shadow: inset 1px 1px 3px #171717,
-               inset -1px -1px 3px #5b5b5b;
+               inset -1px -1px 3px #5b5b5b !important;
   box-shadow:  inset 1px 1px 3px #171717,
-               inset -1px -1px 3px #5b5b5b;
+               inset -1px -1px 3px #5b5b5b !important;
 
   /* box-shadow: inset 0px 0px 1px 0px rgba(50, 50, 50, 0.5); */
   }
