--- a/ngcs/css/puzzel.css
+++ b/ngcs/css/puzzel.css
@@ -1167,6 +1167,7 @@ html .intelecomdialog__answer-text small {
   word-wrap: break-word;
   word-break: break-word;
   margin-left: 10px;
+  margin-top: 5px;
   background: #393939;
   color: #d2d2d2;
   display: inline-block;
@@ -1638,7 +1639,7 @@ html {
                -1px -1px 3px #5b5b5b;
   padding: 5px;
   position: relative;
-  margin-bottom: 10px;
+  margin-bottoma: 10px;
   margin-left: 10px;
  }
   .intelecomoption form h1 {
