--- a/ngcs/css/puzzel.css
+++ b/ngcs/css/puzzel.css
@@ -1077,7 +1077,9 @@ margin-left: 10px;
   height: 20px; }
 
 .intelecomdialog__question {
-  text-align: right; }
+  text-align: right;
+  margin-top: 10px;
+ }
 
 .intelecomdialog__question-text {
   text-align: left;
@@ -1158,6 +1160,7 @@ font-size: 10px;
 
 .intelecomdialog__answer {
   margin-bottom: 10px;
+    margin-top: 10px;
   text-align: left; }
 
 html .intelecomdialog__answer-text small {
@@ -1167,7 +1170,6 @@ html .intelecomdialog__answer-text small {
   word-wrap: break-word;
   word-break: break-word;
   margin-left: 10px;
-  margin-top: 5px;
   background: #393939;
   color: #d2d2d2;
   display: inline-block;
