--- a/_includes/section2B.html
+++ b/_includes/section2B.html
@@ -10,7 +10,7 @@
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <h4 style="color:#52a2d4">Agile Interim Leadership</h4>
-                            <p>In transition or critical scaling periods, Peter steps in with adaptive leadership roles, such as CTO/CIO/CDO or Managind Director. His guidance is more than temporary stewardship; it's a transformative force, vital for maintaining momentum, fostering innovation, and steering your company through the multifaceted phases of digital integration and expansion.</p>
+                            <p>In transition or critical scaling periods, Peter steps in with adaptive leadership roles, such as CTO/CIO/CDO or Managing Director. His guidance is more than temporary stewardship; it's a transformative force, vital for maintaining momentum, fostering innovation, and steering your company through the multifaceted phases of digital integration and expansion.</p>
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <h4 style="color:#a4b482">AI Innovation in Practice</h4>
