--- a/_includes/section3.html
+++ b/_includes/section3.html
@@ -2,11 +2,12 @@
     <section id="about" class="content-section">
         <div class="about-section">
             <div class="container">
-               <div class="row" style="background: rgba(0, 0, 0, 0.5); padding: 20px;">
-                <div class="col-lg-4 col-md-4 col-sm-4">
-                <img src="/img/peter-bg.png">
+               <div class="row" >
+                <div class="col-lg-6 col-md-6">
+                    <img src="/img/peter-about.jpg" height="600px" alt="peter">
+                
                 </div>
-                <div class="col-lg-8 col-md-8  col-sm-8" >
+                <div class="col-lg-6 col-md-6" style="background: rgba(0, 0, 0, 0.5); padding: 20px;">
                     <h2>
                         About Peter Sandström:<br> The Digital Transformer
                     </h2>
