--- a/_includes/section4.html
+++ b/_includes/section4.html
@@ -2,12 +2,13 @@
     <section id="download" class="content-section">
         <div class="track-section">
             <div class="container">
-                <div class="row" style="background: rgba(0, 0, 0, 0.5); padding: 20px;">
-                    <div class="col-lg-12">
-                        <h2>Proven Track Record of <br>Leadership and Innovation
-                        </h2>
+                <div class="row" >
+                   
+                    <div class="col-lg-6 offset-lg-6" style="background: rgba(0, 0, 0, 0.8); padding: 20px;">
+                        <h2>Proven Track Record of <br>Leadership and Innovation</h2>
                         <p>Peter's work history is a testament to his skill in leading high-impact initiatives and driving technological integration across various sectors. His strategic leadership at Devoteam resulted in team expansion and higher customer satisfaction. His insights into AI and cloud technologies have consistently translated into innovative, practical business solutions.</p>
                     </div>
+                    <div class="col-lg-6 offset-lg-6"></div>
                 </div>
             </div>
         </div>
