--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
     <!-- Footer -->
     <footer>
         <div class="container text-center">
-            <p>Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }}</p>
+            <p>Copyright &copy; {{ site.footer }} 20{{ site.time | date: '%y' }} Org.nr: 559399-3099, Hankgränd 6, 163 55 Spånga</p>
         </div>
     </footer>
