--- a/_includes/section1.html
+++ b/_includes/section1.html
@@ -3,10 +3,12 @@
         <div class="transform-section">
             <div class="container" >
                 <div class="row">
-                    <div class="col-lg-12" style="background: rgba(0, 0, 0, 0.5); padding: 20px;">
+                   
+                    <div class="col-lg-12 col-md-12 col-sm-12" style="background: rgba(0, 0, 0, 0.8); padding: 20px;">
                         <h2>Transform Your Business<br> with Peter Sandström</h2>
                         <p>In a digitally-driven world, businesses require more than just a consultant; they need a visionary architect who understands the digital landscape and can anticipate and actively mould the future. Enter Peter Sandström, your Stockholm-based ally, bringing over two decades of transformative leadership and strategic prowess into play. With Peter, you're not just adapting to the digital era; you're leveraging it to your advantage, turning technological advancements into profitable opportunities, and achieving not just results but remarkable success stories. Experience transformative journeys where your digital goals aren't just met; they're exceeded, propelling your business into innovation, growth, and unparalleled leadership in your industry.</p>
                     </div>
+                    
                 </div>
             </div>
         </div>
