--- a/_includes/section3.html
+++ b/_includes/section3.html
@@ -4,7 +4,8 @@
             <div class="container">
                <div class="row" >
                 <div class="col-lg-6 col-md-6">
-                    <img src="/img/peter-about.jpg" height="600px" alt="peter">
+                    <img src="/img/peter-about.jpg" height: auto; width="100%" alt="peter">
+
                 
                 </div>
                 <div class="col-lg-6 col-md-6" style="background: rgba(0, 0, 0, 0.5); padding: 20px;">
