--- a/_includes/section2B.html
+++ b/_includes/section2B.html
@@ -6,11 +6,11 @@
 
                     <div class="col-lg-4 col-md-4">
                         <h4 style="color:#ffffcc">Strategic Digital Transformation</h4> 
-                            <p>With Peter's vast experience, confidently navigate the digital landscape. He architects pioneering strategies, crafts outlines of bespoke blueprints to position your business at the digital evolution's forefront, turns challenges into opportunities, and drives sustainable growth.</p>
+                            <p>With Peter's vast experience, confidently navigate the digital landscape. He architects innovative strategies, crafts outlines of bespoke blueprints to position your business at the digital evolution's forefront, turns challenges into opportunities, and drives sustainable growth.</p>
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <h4 style="color:#52a2d4">Agile Interim Leadership</h4>
-                            <p>In transition or critical scaling periods, Peter steps in with adaptive leadership roles, such as CTO/CIO/CDO or Managing Director. His guidance is more than temporary stewardship; it's a transformative force, vital for maintaining momentum, fostering innovation, and steering your company through the multifaceted phases of digital integration and expansion.</p>
+                            <p>In transition or critical scaling periods, Peter steps in with adaptive leadership roles, such as CTO/CIO/CDO or Managing Director. His guidance is more than temporary stewardship; it's a positive impact, vital for maintaining momentum, fostering innovation, and steering your company through the multifaceted phases of digital integration and expansion.</p>
                     </div>
                     <div class="col-lg-4 col-md-4">
                         <h4 style="color:#a4b482">AI Innovation in Practice</h4>
