--- a/_includes/section2A.html
+++ b/_includes/section2A.html
@@ -5,7 +5,7 @@
                 <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6" style="background: rgba(0, 0, 0, 0.8); padding: 20px;">
                     <h2>Empowering Digital Evolution<br> with Strategic Oversight and Innovation</h2>
-                    <p>Peter stands at the confluence of strategic mastery and technological innovation, providing a robust suite of services designed to empower businesses through their digital evolution journey. His offerings include solutions, pivotal digital transformation game-changers, interim leadership, and innovation of Amplified Intelligence.</p>
+                    <p>Peter stands at the confluence of strategic proficiency and technological innovation, providing a robust suite of services designed to empower businesses through their digital evolution journey. His offerings include solutions, pivotal digital transformation game-changers, interim leadership, and innovation of Amplified Intelligence.</p>
                 </div>
                 </div>
             </div>
