--- a/_includes/section2B.html
+++ b/_includes/section2B.html
@@ -4,17 +4,14 @@
             <div class="container">
                 <div class="row" style="background: rgba(0, 0, 0, 0.8); padding: 20px;">
 
-                    <div class="col-lg-4 col-md-4">
-                        <h4 style="color:#ffffcc">Strategic Digital Transformation</h4> 
-                            <p>With Peter's vast experience, confidently navigate the digital landscape. He architects innovative strategies, crafts outlines of bespoke blueprints to position your business at the digital evolution's forefront, turns challenges into opportunities, and drives sustainable growth.</p>
+                    <div class="col-lg-6 col-md-6">
+                        <h4 style="color:#ffffcc">STRATEGIC DIGITAL GROWTH</h4> 
+                            <p>Peter leverages his extensive experience to steer businesses through the digital landscape. He designs tailored strategies, creates custom roadmaps, and positions your business for sustainable growth and market leadership.</p>
                     </div>
-                    <div class="col-lg-4 col-md-4">
-                        <h4 style="color:#52a2d4">Agile Interim Leadership</h4>
+                    <div class="col-lg-6 col-md-6">
+                        <h4 style="color:#52a2d4">ADAPTIVE INTERIM LEADERSHIP
+                        </h4>
                             <p>In transition or critical scaling periods, Peter steps in with adaptive leadership roles, such as CTO/CIO/CDO or Managing Director. His guidance is more than temporary stewardship; it's a positive impact, vital for maintaining momentum, fostering innovation, and steering your company through the multifaceted phases of digital integration and expansion.</p>
-                    </div>
-                    <div class="col-lg-4 col-md-4">
-                        <h4 style="color:#a4b482">AI Innovation in Practice</h4>
-                            <p>Peter's expertise transcends conventional boundaries by integrating AI into business paradigms. Leveraging deep ties with industry-leading tech spheres, he ensures your business harnesses the full potential of amplifíed intelligence, streamlining processes and igniting innovation. While AI transformation is at the forefront, he strategically helps scale back on cloud services, making digital operations more efficient and cost-effective.</p>
                     </div>
                 </div>
             </div>
