--- a/_includes/section2A.html
+++ b/_includes/section2A.html
@@ -4,8 +4,11 @@
             <div class="container">
                 <div class="row">
                 <div class="col-lg-6 col-md-6 col-sm-6" style="background: rgba(0, 0, 0, 0.8); padding: 20px;">
-                    <h2>Empowering Digital Evolution<br> with Strategic Oversight and Innovation</h2>
-                    <p>Peter stands at the confluence of strategic proficiency and technological innovation, providing a robust suite of services designed to empower businesses through their digital evolution journey. His offerings include solutions, pivotal digital transformation game-changers, interim leadership, and innovation of Amplified Intelligence.</p>
+                    <h2>GUIDING DIGITAL AND ORGANIZATIONAL GROWTH 
+                        
+
+                        <br> WITH INSIGHT AND AGILITY</h2>
+                    <p>Peter provides strategic oversight fused with practical technological insights, delivering services that foster your business’s growth and digital maturity. He specializes in holistic digital transformation strategies, adaptive interim leadership, and the integration of effective digital tools.</p>
                 </div>
                 </div>
             </div>
