--- a/_includes/section3.html
+++ b/_includes/section3.html
@@ -10,9 +10,9 @@
                 </div>
                 <div class="col-lg-6 col-md-6" style="background: rgba(0, 0, 0, 0.5); padding: 20px;">
                     <h2>
-                        About Peter Sandström:<br> The Digital Transformer
+                        About Peter Sandström:<br> PROVEN LEADERSHIP IN DRIVING INNOVATIVE GROWTH
                     </h2>
-                    <p>Peter has a storied career marked by substantial achievements, from spearheading digital initiatives at ICA, IKEA, Alstom, and ASSA ABLOY to transformative roles at Devoteam, Deloitte, and SATS. His unique strength lies in harmonising technology with business, cultivating strategic partnerships, and realising untapped market potential.</p>
+                    <p>Peter Sandström's career is marked by a commitment to excellence, evidenced by transformative leadership roles and the successful integration of technology in various sectors. With strategic foresight, he has expanded teams and enhanced customer satisfaction. His approach to business solutions is not just innovative—it's practical and results-driven.</p>
                 </div>
                </div>
             </div>
